Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18821

fix [-Werror=pointer-to-int-cast] in obd_quota_iter()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • Lustre 2.17.0
    • None
    • 3
    • 9223372036854775807

    Description

      Distro: Debian 12
      Kernel: 6.1.0-32-686-pae
      Gcc: 12.2

      lustre/include/obd_class.h: In function 'obd_quota_iter':
      lustre/include/obd_class.h:1289:39: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
       1289 |                 oqctl->qc_iter_list = (__u64)list;
            |                                       ^
      cc1: all warnings being treated as errors
      

      Attachments

        Activity

          People

            yujian Jian Yu
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: