lustre/osc/osc_quota.c
@@ -221,7 +221,8 @@ int osc_quotactl(struct obd_device *unused, struct obd_export *exp,
                 CERROR("ptlrpc_queue_wait failed, rc: %d\n", rc);
 
 	if (rc == 0 && req->rq_repmsg) {
-		struct list_head *lst = (struct list_head *)oqctl->qc_iter_list;
+		struct list_head *lst =
+			(struct list_head *)(uintptr_t)(oqctl->qc_iter_list);
 
 		oqc = req_capsule_server_get(&req->rq_pill, &RMF_OBD_QUOTACTL);
 		if (!oqc)
